--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -19,7 +19,8 @@
         android:src="@drawable/forgetpasswod"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo">
 
     </ImageView>
 
@@ -32,9 +33,9 @@
         android:layout_marginTop="55dp"
         android:layout_marginEnd="55dp"
         android:fontFamily="@font/adamina"
-        android:text="Please Enter Your E-Mail Address To Recieve a Verification Code."
+        android:text="@string/please_enter_your_e_mail_address_to_recieve_a_verification_code"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,20 +51,21 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_email"
+        android:drawableStart="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:elevation="3dp"
-        android:hint="E-Mail"
+        android:hint="@string/e_mail"
         android:fontFamily="@font/adamina"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword">
+        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword"
+        android:autofillHints="">
 
     </EditText>
 
@@ -78,12 +80,12 @@
         android:background="@drawable/input_bg"
         android:backgroundTint="#002868"
         android:padding="10dp"
-        android:text="Send"
+        android:text="@string/send"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtEmail">
