--- a/app/src/main/res/layout/slider_layout.xml
+++ b/app/src/main/res/layout/slider_layout.xml
@@ -22,7 +22,7 @@
         android:text="@string/heading_0ne"
         android:textAlignment="center"
         android:textColor="@color/blue"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"/>
 
@@ -36,5 +36,5 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:fontFamily="@font/adamina"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 </LinearLayout>
