--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -13,11 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="320dp"
         android:background="#00000000"
-        android:text="Skip"
+        android:text="@string/skip"
         android:textColor="@color/black"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,8 +41,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:background="#00000000"
-        android:drawableLeft="@drawable/ic_arrow_back"
-        android:text="Back"
+        android:drawableStart="@drawable/ic_arrow_back"
+        android:text="@string/back"
         android:textAllCaps="false"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
@@ -56,8 +57,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
         android:background="#00000000"
-        android:drawableRight="@drawable/ic_arrow"
-        android:text="Next"
+        android:drawableEnd="@drawable/ic_arrow"
+        android:text="@string/next"
         android:textAllCaps="false"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
@@ -76,7 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slideviewpager"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/slideviewpager" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
