--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".signIn">
 
     <TextView
@@ -15,9 +14,9 @@
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/faster_one"
         android:gravity="center"
-        android:text="GoodsMent"
+        android:text="@string/goodsment"
         android:textColor="@color/blue"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,12 +30,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
-        android:text="Login to your Account"
-        android:textColor='@color/black'
-        android:textStyle="bold"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/adamina"
-        android:textSize="20dp"
+        android:text="@string/login_to_your_account"
+        android:textColor='@color/black'
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView1" />
@@ -49,15 +48,15 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_email"
+        android:drawableStart="@drawable/ic_email"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,21 +70,20 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_security"
+        android:drawableStart="@drawable/ic_security"
         android:drawablePadding="10dp"
         android:fontFamily="@font/adamina"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtEmail">
+        app:layout_constraintTop_toBottomOf="@+id/edtEmail"/>
 
-    </EditText>
 
     <Button
         android:id="@+id/btnSignin"
@@ -96,7 +94,7 @@
         android:layout_marginEnd="105dp"
         android:background="@drawable/btn_bg"
         android:backgroundTint="@color/blue"
-        android:text="sign in"
+        android:text="@string/sign_in"
         android:textColor="@color/white"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
@@ -110,11 +108,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="240dp"
         android:layout_marginTop="20dp"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignin" />
@@ -128,66 +126,57 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="100dp"
         android:gravity="center"
-        android:text="- Or sign in with -"
+        android:text="@string/or_sign_in_with"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtForgotpassword" />
+
 
     <ImageView
         android:id="@+id/imgGoogle"
         android:layout_width="70dp"
         android:layout_height="55dp"
-        android:layout_marginStart="180dp"
+        android:layout_marginStart="170dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="170dp"
         android:backgroundTint="#0000"
         android:src="@drawable/googlelogo"
-        app:layout_constraintEnd_toStartOf="@+id/imgFacebook"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/or" />
 
-
-    <ImageView
-        android:id="@+id/imgFacebook"
-        android:layout_width="70dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="180dp"
-        android:backgroundTint="#0000"
-        android:src="@drawable/facebooklogo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgGoogle"
-        app:layout_constraintTop_toBottomOf="@+id/or" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
-        android:text="Don't have an account?"
-        android:textColor="@color/black"
+        android:layout_marginEnd="80dp"
         android:fontFamily="@font/adamina"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:text="@string/don_t_have_an_account"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgGoogle" />
 
     <TextView
         android:id="@+id/txtSignup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="90dp"
+        android:layout_width="60dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="33dp"
         android:fontFamily="@font/adamina"
-        android:text="Sign up"
+        android:text="@string/sign_up"
         android:textColor="@color/blue"
-        android:textSize="15dp"
+        android:textSize="13sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgFacebook" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgGoogle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
