--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".signup">
 
+    <Button
+        android:id="@+id/btnbackarrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_arrow_back"
+        android:background="#00000000"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="6dp"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="296dp"
         android:layout_height="51dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/faster_one"
         android:gravity="center"
-        android:text="GoodsMent"
+        android:text="@string/goodsment"
         android:textColor="@color/blue"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,11 +41,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/adamina"
-        android:text="Create your Account"
+        android:text="@string/create_your_account"
         android:textColor='@color/black'
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,19 +59,19 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_person"
+        android:drawableStart="@drawable/ic_person"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 
     <EditText
         android:id="@+id/edtEmail"
@@ -71,20 +81,20 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="textEmailAddress"
-        android:hint="Email"
+        android:hint="@string/email"
         android:background="@drawable/input_bg"
         android:fontFamily="@font/adamina"
-        android:drawableLeft="@drawable/ic_email"
+        android:drawableStart="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtUname" />
+        app:layout_constraintTop_toBottomOf="@+id/edtUname"/>
 
     <EditText
         android:id="@+id/edtCnumber"
@@ -94,15 +104,15 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="phone"
-        android:hint="Contact Number"
+        android:hint="@string/contact_number"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_phone"
+        android:drawableStart="@drawable/ic_phone"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -117,15 +127,15 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:inputType="text"
-        android:hint="City"
+        android:hint="@string/city"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_city"
+        android:drawableStart="@drawable/ic_city"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -139,16 +149,16 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_security"
+        android:drawableStart="@drawable/ic_security"
         android:fontFamily="@font/adamina"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -164,7 +174,7 @@
         android:layout_marginEnd="105dp"
         android:background="@drawable/btn_bg"
         android:backgroundTint="@color/blue"
-        android:text="sign up"
+        android:text="@string/sign_up"
         android:fontFamily="@font/adamina"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -177,13 +187,13 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="145dp"
+        android:layout_marginEnd="70dp"
         android:fontFamily="@font/adamina"
-        android:text="Already have an Account?"
+        android:text="@string/already_have_an_account"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -194,25 +204,15 @@
         android:id="@+id/txtsignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="205dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="90dp"
         android:fontFamily="@font/adamina"
-        android:text="Sign in"
+        android:text="@string/signin"
         android:textColor="@color/blue"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
 
-    <Button
-        android:id="@+id/btnbackarrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_arrow_back"
-        android:background="#00000000"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="6dp"
-        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
