--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,9 +27,9 @@
         android:layout_marginEnd="90dp"
         android:fontFamily="@font/faster_one"
         android:gravity="center"
-        android:text="GoodsMent"
+        android:text="@string/goodsment"
         android:textColor="@color/blue"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
