--- a/app/src/main/res/drawable/cardbackground.xml
+++ b/app/src/main/res/drawable/cardbackground.xml
@@ -3,8 +3,10 @@
     android:shape="rectangle">
 
     <stroke
-        android:color="@color/black"
-        android:width="3dp" />
-    <corners android:radius="20dp" />
+        android:color="@color/white"
+        android:width="3dp"/>
+
+    <corners
+        android:radius="12dp"/>
 
 </shape>
