--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -19,8 +19,7 @@
         android:src="@drawable/forgetpasswod"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/todo">
+        app:layout_constraintTop_toTopOf="parent">
 
     </ImageView>
 
@@ -43,31 +42,38 @@
 
     </TextView>
 
-    <EditText
-        android:id="@+id/edtEmail"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtinputemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="10dp"
-        android:elevation="3dp"
-        android:hint="@string/e_mail"
-        android:fontFamily="@font/adamina"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp"
+        android:hint="@string/enter_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword"
-        android:autofillHints="">
+        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword">
 
-    </EditText>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_email"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:fontFamily="@font/adamina"
+            android:inputType="textEmailAddress"
+            android:paddingStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnsend"
@@ -78,7 +84,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="105dp"
         android:background="@drawable/input_bg"
-        android:backgroundTint="#002868"
+        style="@style/ButtonStyle"
         android:padding="10dp"
         android:text="@string/send"
         android:fontFamily="@font/adamina"
@@ -88,7 +94,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtEmail">
+        app:layout_constraintTop_toBottomOf="@+id/txtinputemail">
 
     </Button>
 
