--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#180AF7</color>
-    <color name="purple_500">#180AF7</color>
-    <color name="purple_700">#180AF7</color>
+    <color name="purple_200">#002868</color>
+    <color name="purple_500">#002868</color>
+    <color name="purple_700">#002868</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
