--- a/app/src/main/res/layout/fragment_vehicle_owner.xml
+++ b/app/src/main/res/layout/fragment_vehicle_owner.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.vehicleOwnerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewVihicleOwner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbars="vertical"
+        android:layout_marginTop="55dp"/>
+
 
 </FrameLayout>
