--- a/app/src/main/res/drawable/bg_view.xml
+++ b/app/src/main/res/drawable/bg_view.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#CAD2DF"
+                android:width="2dp"/>
 
-    <corners android:bottomRightRadius="75dp"
-        android:bottomLeftRadius="75dp"/>
-    <solid android:color="@color/blue"/>
-</shape>
+            <corners android:topLeftRadius="10dp"
+                android:topRightRadius="10dp"
+                android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"/>
+        </shape>
+    </item>
+</selector>
