--- a/app/src/main/res/drawable/top_background.xml
+++ b/app/src/main/res/drawable/top_background.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <gradient
-        android:startColor="@color/blue"
-        android:endColor="@color/blue"
-        android:angle="128"/>
-
+    <solid
+        android:color="@color/blue" />
     <corners
-        android:bottomLeftRadius="45dp"
-        android:bottomRightRadius="45dp"/>
-
+        android:bottomRightRadius="32dp"
+        android:bottomLeftRadius="32dp"/>
 
 </shape>
