--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -44,44 +44,43 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtinputemail"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="30dp"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:boxBackgroundColor="#E5E9EF"
+        app:boxBackgroundMode="outline"
         android:hint="@string/enter_email"
+        app:boxStrokeColor="@color/blue"
+        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword">
+        app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword"
+        app:startIconDrawable="@drawable/ic_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/input_bg"
-            android:drawableStart="@drawable/ic_email"
-            android:drawablePadding="10dp"
-            android:ems="10"
+            android:layout_height="62dp"
             android:fontFamily="@font/adamina"
             android:inputType="textEmailAddress"
-            android:paddingStart="20dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/edtUname" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnsend"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginStart="105dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="105dp"
         android:background="@drawable/input_bg"
         style="@style/ButtonStyle"
@@ -91,7 +90,7 @@
         android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtinputemail">
