--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -9,19 +9,23 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="300dp"
         android:background="@drawable/top_background"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints" />
 
-    <ImageView
+    <TextView
         android:id="@+id/textView5"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="150dp"
-        android:src="@drawable/applogo"
+        android:text="@string/goodsment"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/adamina"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,11 +33,14 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/signincard"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="@color/bg"
+        android:layout_height="550dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#f9fafb"
         app:cardElevation="20dp"
         app:cardCornerRadius="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -50,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="60dp"
                 android:fontFamily="@font/adamina"
                 android:text="@string/login_to_your_account"
                 android:textColor='@color/black'
@@ -68,9 +75,15 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="30dp"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:boxBackgroundColor="#E5E9EF"
+                app:boxBackgroundMode="outline"
                 android:hint="@string/enter_email"
                 app:boxStrokeColor="@color/blue"
-                app:hintTextColor="@color/blue"
+                app:hintTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -79,9 +92,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="62dp"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/adamina"
                     android:inputType="textEmailAddress"
+                    android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/edtUname" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -95,9 +109,15 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="30dp"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:boxBackgroundColor="#E5E9EF"
+                app:boxBackgroundMode="outline"
                 android:hint="@string/enter_password"
                 app:boxStrokeColor="@color/blue"
-                app:hintTextColor="@color/blue"
+                app:hintTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtinputemail"
@@ -109,7 +129,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/adamina"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textPassword"
+                    android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/edtUname" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -119,11 +140,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="240dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/adamina"
                 android:text="@string/forgot_password"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -131,20 +152,24 @@
 
             <Button
                 android:id="@+id/btnSignin"
-                style="@style/ButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="180dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
                 android:layout_marginStart="105dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginEnd="105dp"
-                android:background="@drawable/btn_bg"
-                android:fontFamily="@font/adamina"
+                android:background="@drawable/input_bg"
+                style="@style/ButtonStyle"
+                android:padding="10dp"
                 android:text="@string/sign_in"
-                android:textColor="@color/white"
+                android:fontFamily="@font/adamina"
                 android:textStyle="bold"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtForgotpassword" />
+                app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -156,8 +181,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="80dp"
-                    android:layout_marginEnd="100dp"
+                    android:layout_marginStart="55dp"
+                    android:layout_marginEnd="125dp"
                     android:fontFamily="@font/adamina"
                     android:text="@string/don_t_have_an_account"
                     android:textColor="@color/black"
@@ -169,16 +194,13 @@
 
                 <TextView
                     android:id="@+id/txtSingup"
-                    android:layout_width="64dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/signup"
                     android:textColor="@color/blue"
                     android:textSize="15sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.609"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    tools:layout_editor_absoluteY="3dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
