--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="120dp"
+    android:background="@color/blue"
+    android:id="@+id/headerView"
+    android:clickable="true"
+    android:orientation="horizontal"
+    android:focusable="true">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="60dp"
+        android:layout_height="70dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/applogo" />
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/adminprofile" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nav_header_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:text="@string/name"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            app:drawableEndCompat="@drawable/ic_next" />
+
+        <TextView
+            android:id="@+id/nav_header_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/email"
+            android:textSize="14sp"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
 
 </LinearLayout>
