--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.userFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/userrecyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scrollbars="vertical"
+    android:layout_marginTop="55dp"/>
 
 </FrameLayout>
