--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#AB363535</color>
     <color name="blue">#002868</color>
+    <color name="midnightblue">#191970</color>
 
     <color name="bg">#FFE8E7EA</color>
+    <color name="lightblue">#BFC9D9</color>
     //indicator color
     <color name="inactive">#C4C4C4</color>
     <color name="active">#002868</color>
