--- a/app/src/main/res/layout/activity_admin_profile.xml
+++ b/app/src/main/res/layout/activity_admin_profile.xml
@@ -124,6 +124,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/adamina"
+                    android:focusable="false"
+                    android:clickable="false"
+                    android:cursorVisible="false"
                     android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
