--- a/app/src/main/res/layout/fragment_return_policy.xml
+++ b/app/src/main/res/layout/fragment_return_policy.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.returnPolicyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <WebView
+        android:id="@+id/refundpolicy"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_marginTop="55dp"/>
 </FrameLayout>
